Started implementing buffered image ring